# cuda-ai-2026

./: README.md
default/1_gelu_omp/lobanova_elizaveta/: gelu_omp.cpp
default/1_gelu_omp/novozhilov_mikhail/: gelu_omp.cpp
default/1_gelu_omp/smirnov_denis/: gelu_omp.cpp
default/1_gelu_omp/zinoviev_vladimir/: gelu_omp.cpp
default/2_gelu_cuda/kireev_daniil/: CMakeLists.txt  gelu_cuda.cu  main.cpp
default/2_gelu_cuda/lobanova_elizaveta/: gelu_cuda.cu
default/2_gelu_cuda/pinegina_natalia/: gelu_cuda.cpp
default/3_naive_gemm_cuda/lobanova_elizaveta/: naive_gemm_cuda.cu
default/4_block_gemm_cuda/chervyakov_ivan/: block_gemm_cuda.cu
default/4_block_gemm_cuda/pigasin_dmitry/: CMakeLists.txt  block_gemm_cuda.cu  main.cpp
default/4_block_gemm_cuda/zemskov_roman/: block_gemm_cuda.cu
default/5_gemm_cublas/chervyakov_ivan/: gemm_cublas.cu
default/6_softmax_cuda/lobanova_elizaveta/: log.txt  softmax_cuda.cu
default/6_softmax_cuda/smirnov_denis/: softmax_cuda.cu  softmax_cuda.h
default/7_layernorm_pycuda/pigasin_dmitry/: layernorm_pycuda.py
